--- a/app/src/main/res/anim/show_from_bottom.xml
+++ b/app/src/main/res/anim/show_from_bottom.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:interpolator/accelerate_cubic"
-    android:fromYDelta="30%p"
-    android:toYDelta="0"
-    android:duration="300" />
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true">
+    <translate
+        android:duration="1000"
+        android:fromYDelta="30%p"
+        android:interpolator="@android:interpolator/accelerate_cubic"
+        android:toYDelta="0" />
+
+    <!--Fade In-->
+    <alpha
+        android:duration="2000"
+        android:fromAlpha="0.0"
+        android:interpolator="@android:anim/decelerate_interpolator"
+        android:toAlpha="1.0"></alpha>
+</set>
