--- a/app/src/main/res/anim/fab2_hide.xml
+++ b/app/src/main/res/anim/fab2_hide.xml
@@ -5,15 +5,15 @@
     <!--Move-->
     <translate
         android:duration="1000"
-        android:fromXDelta="0%"
-        android:fromYDelta="-40%"
+        android:fromXDelta="0%p"
+        android:fromYDelta="-4%p"
         android:interpolator="@android:anim/linear_interpolator"
-        android:toXDelta="0%"
-        android:toYDelta="0%"></translate>
+        android:toXDelta="0%p"
+        android:toYDelta="0%p"></translate>
 
     <!--Fade Out-->
     <alpha
-        android:duration="2000"
+        android:duration="1500"
         android:fromAlpha="1.0"
         android:interpolator="@android:anim/accelerate_interpolator"
         android:toAlpha="0.0"></alpha>
