--- a/app/src/main/res/drawable/circle_photo.xml
+++ b/app/src/main/res/drawable/circle_photo.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/colorBlackAlpha" />
-    <size
-        android:width="60dp"
-        android:height="60dp" />
+    <gradient
+        android:angle="0"
+        android:startColor="@color/colorOrange"
+        android:endColor="@color/colorOrangeDark"
+        android:type="linear" />
 </shape>
