--- a/app/src/main/res/layout/fragment_list_drives.xml
+++ b/app/src/main/res/layout/fragment_list_drives.xml
@@ -5,9 +5,11 @@
     tools:context="com.domicilio.confiable.doco.views.fragments.ListDriverFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_drivers_avaible"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_margin="0dp">
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
