--- a/app/src/main/res/layout/view_item_conductor_disponible.xml
+++ b/app/src/main/res/layout/view_item_conductor_disponible.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:cardUseCompatPadding="false"
+    app:cardPreventCornerOverlap="false"
+    app:cardCornerRadius="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,14 +15,14 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/conductor_profile_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_centerInParent="true"
-            android:src="@drawable/profile"
             android:layout_gravity="bottom"
             android:layout_margin="10dp"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#FF000000"/>
+            android:src="@drawable/profile"
+            app:civ_border_color="@color/colorBlackAlpha"
+            app:civ_border_width="0.5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,11 +30,11 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:layout_weight="1"
                 android:gravity="bottom"
-                android:layout_weight="1">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/name_driver"
@@ -41,47 +43,57 @@
                     android:layout_marginLeft="5dp"
                     android:text="Edwin Fernando Muñoz"
                     android:textColor="@color/colorBlack"
-                    android:textSize="19sp" />
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginBottom="15dp">
-                    <ImageView
+                    android:layout_marginLeft="5dp">
+
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_action_doco"/>
-                    <ImageView
+                        android:layout_weight="1"
+                        android:drawableLeft="@drawable/ic_pin_drop_black"
+                        android:drawableTint="@color/colorBlackAlpha"
+                        android:gravity="center_vertical"
+                        android:text=":" />
+
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_action_doco"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_action_doco"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_action_doco"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_action_doco"/>
+                        android:layout_weight="1"
+                        android:drawableLeft="@drawable/ic_access_alarm_black"
+                        android:drawableTint="@color/colorBlackAlpha"
+                        android:gravity="center_vertical"
+                        android:text=":" />
                 </LinearLayout>
 
-
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="0.5dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/colorBlackAlpha2" />
             </LinearLayout>
 
-          <!--  <com.github.clans.fab.FloatingActionButton
+            <ImageButton
                 android:id="@+id/fab_conductor_more"
-                style="@style/MenuButtonsStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/ic_help_outline_black"
-                android:layout_gravity="center|right"
-                fab:menu_shadowColor="@color/colorBlackAlphaHint"/>-->
+                android:background="@drawable/circle_photo"
+                android:padding="5dp"
+                android:shadowColor="#000000"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="1"
+                android:src="@drawable/ic_assignment_ind_black"
+                android:tint="@color/colorWhite"
+                android:elevation="5dp"/>
         </LinearLayout>
+
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
