Se crea los fragments DriverCome y DriverProfile. Se crea clase para redimenciar imagenes y calcular tamaño de pantalla. Se crea metodo en la calse utilidades para redonder imagenes. Se crear nuevos iconos. Se crean nuevas animaciones. Se crea efecto ripple.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -129,14 +129,15 @@
                 android:layout_weight="0"
                 android:gravity="center">
 
-                <com.balysv.materialripple.MaterialRippleLayout
-                    style="@style/RippleView"
-                    app:mrl_rippleColor="@color/colorBlackAlpha">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Button.Orange">
                     <Button
                         android:id="@+id/btn_register_me"
-                        style="@style/Button.Orange"
+                        style="@style/SelectableItemBackgroundButton"
                         android:text="@string/registrar" />
-                </com.balysv.materialripple.MaterialRippleLayout>
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
