--- a/app/src/main/res/layout/view_item_conductor_disponible.xml
+++ b/app/src/main/res/layout/view_item_conductor_disponible.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/driver_avaible"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    app:cardUseCompatPadding="false"
+    android:foreground="@drawable/selectable_item_background"
+    android:clickable="true"
+    app:cardCornerRadius="0dp"
     app:cardPreventCornerOverlap="false"
-    app:cardCornerRadius="0dp">
+    app:cardUseCompatPadding="false">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/conductor_profile_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_centerInParent="true"
-            android:layout_gravity="bottom"
+        <ImageView
+            android:id="@+id/driver_avaible_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:src="@drawable/profile"
-            app:civ_border_color="@color/colorBlackAlpha"
-            app:civ_border_width="0.5dp" />
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,7 +56,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:drawableLeft="@drawable/ic_pin_drop_black"
+                        android:drawableLeft="@drawable/ic_pin_drop"
                         android:drawableTint="@color/colorBlackAlpha"
                         android:gravity="center_vertical"
                         android:text=":" />
@@ -64,7 +65,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:drawableLeft="@drawable/ic_access_alarm_black"
+                        android:drawableLeft="@drawable/ic_access_alarm"
                         android:drawableTint="@color/colorBlackAlpha"
                         android:gravity="center_vertical"
                         android:text=":" />
@@ -77,21 +78,27 @@
                     android:background="@color/colorBlackAlpha2" />
             </LinearLayout>
 
-            <ImageButton
-                android:id="@+id/fab_conductor_more"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/circle_photo"
-                android:padding="5dp"
                 android:shadowColor="#000000"
                 android:shadowDx="1"
                 android:shadowDy="1"
                 android:shadowRadius="1"
-                android:src="@drawable/ic_assignment_ind_black"
-                android:tint="@color/colorWhite"
-                android:elevation="5dp"/>
+                android:elevation="5dp">
+
+                <ImageButton
+                    android:id="@+id/fab_driver_profile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_assignment_ind"
+                    android:tint="@color/colorWhite"
+                    style="@style/SelectableItemBackground"/>
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
