Se corrige seteo de imagenes de perfil ajustables segun el tamaño del dispositivo

--- a/app/src/main/res/drawable/ripple_black.xml
+++ b/app/src/main/res/drawable/ripple_black.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/colorBlackAlpha2"
-    tools:ignore="NewApi" />
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@color/colorBlackAlpha" android:state_focused="true" />
+    <item android:drawable="@color/colorBlackAlpha2" android:state_pressed="false" />
+    <item android:drawable="@android:color/transparent" />
+</selector>
