--- a/app/src/main/res/anim/enter_from_right.xml
+++ b/app/src/main/res/anim/enter_from_right.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fillAfter="true">
+    android:shareInterpolator="true">
     <translate
-        android:duration="700"
+        android:duration="800"
         android:fromXDelta="100%"
         android:fromYDelta="0%"
         android:toXDelta="0%"
@@ -11,5 +11,5 @@
     <alpha
         android:fromAlpha="0.0"
         android:toAlpha="1.0"
-        android:duration="700"/>
+        android:duration="1000"/>
 </set>
