--- a/app/src/main/res/layout/fragment_driver_come.xml
+++ b/app/src/main/res/layout/fragment_driver_come.xml
@@ -21,7 +21,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="10dp"
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY" />
 
