--- a/app/src/main/res/layout/view_item_driver_avaible.xml
+++ b/app/src/main/res/layout/view_item_driver_avaible.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/driver_avaible"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:foreground="@drawable/selectable_item_background"
     android:clickable="true"
-    app:cardCornerRadius="0dp"
-    app:cardPreventCornerOverlap="false"
-    app:cardUseCompatPadding="false">
+    card_view:cardCornerRadius="0dp"
+    card_view:cardPreventCornerOverlap="false"
+    card_view:cardUseCompatPadding="false"
+    android:layout_margin="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
