--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,13 +21,15 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <!--             Style of applications            -->
+
     <style name="RippleView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
     </style>
 
-    <style name="Button">
+    <style name="Button" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
@@ -37,8 +39,7 @@
     <style name="Button.Dark" parent="Button">
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:background">@color/colorBlackAlpha</item>
-        <item name="android:paddingLeft">25dp</item>
-        <item name="android:paddingRight">25dp</item>
+        <item name="android:shadowDy">2</item>
     </style>
 
     <style name="Button.Orange" parent="Button">
@@ -91,14 +92,22 @@
 
     <style name="SelectableItemBackground">
         <item name="android:theme">@style/SelectableItemTheme</item>
-        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
     </style>
 
     <style name="SelectableItemBackgroundButton" parent="Button">
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:theme">@style/SelectableItemTheme</item>
-        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
         <item name="android:paddingLeft">80dp</item>
         <item name="android:paddingRight">80dp</item>
+    </style>
+
+    <style name="SelectableItemBackgroundButtonDark" parent="Button">
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:theme">@style/SelectableItemTheme</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:paddingLeft">25dp</item>
+        <item name="android:paddingRight">25dp</item>
     </style>
 </resources>
