Se agrego funcionalidad swipe para cerrar fragment DriverCome y DriverProfile.
Se agrega pantalla de configuración de perfil de usuario.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="size_photo_market_map">0.13px</dimen>
     <dimen name="size_photo_item_driver_avaible">0.17px</dimen>
     <dimen name="size_photo_profile">0.34px</dimen>
+    <dimen name="size_photo_profile_setting">0.22px</dimen>
 </resources>
