--- a/app/src/main/res/layout/fragment_driver_come.xml
+++ b/app/src/main/res/layout/fragment_driver_come.xml
@@ -54,27 +54,27 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_action_doco" />
+                        android:src="@drawable/ic_score_doco" />
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_action_doco" />
+                        android:src="@drawable/ic_score_doco" />
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_action_doco" />
+                        android:src="@drawable/ic_score_doco" />
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_action_doco" />
+                        android:src="@drawable/ic_score_doco" />
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_action_doco" />
+                        android:src="@drawable/ic_score_doco" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
