--- a/app/src/main/res/layout/fragment_list_drives.xml
+++ b/app/src/main/res/layout/fragment_list_drives.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.domicilio.confiable.doco.views.fragments.DriverAvaibleFragment">
+    tools:context="com.domicilio.confiable.doco.views.fragments.DriverAvailableFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_drivers_avaible"
