--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,7 +11,9 @@
 
     <dimen name="size_photo_nav">0.17px</dimen>
     <dimen name="size_photo_market_map">0.13px</dimen>
-    <dimen name="size_photo_item_driver_avaible">0.17px</dimen>
+    <dimen name="size_photo_item_driver_available">0.17px</dimen>
     <dimen name="size_photo_profile">0.34px</dimen>
-    <dimen name="size_photo_profile_setting">0.22px</dimen>
+    <dimen name="size_photo_profile_setting">0.34px</dimen>
+
+    <dimen name="border_margin">5dp</dimen>
 </resources>
