--- a/app/src/main/res/layout/fragment_driver_profile.xml
+++ b/app/src/main/res/layout/fragment_driver_profile.xml
@@ -90,33 +90,41 @@
                 android:text="@string/movil"
                 style="@style/TextViewLabel"/>
 
-            <TextView
-                android:id="@+id/txt_movil_number"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_weight="1" >
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/circle_green"
-                android:shadowColor="#000000"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="1"
-                android:elevation="5dp">
+                <TextView
+                    android:id="@+id/txt_movil_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    />
 
-                <ImageButton
-                    android:id="@+id/fab_driver_call"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    android:src="@drawable/ic_call"
-                    android:tint="@color/colorWhite"
-                    style="@style/SelectableItemBackground"/>
-            </LinearLayout>
+                    android:layout_gravity="center|right"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/circle_green"
+                    android:shadowColor="#000000"
+                    android:shadowDx="1"
+                    android:shadowDy="1"
+                    android:shadowRadius="1"
+                    android:elevation="5dp">
+
+                    <ImageButton
+                        android:id="@+id/fab_driver_call"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:src="@drawable/ic_call"
+                        android:tint="@color/colorWhite"
+                        style="@style/SelectableItemBackground"/>
+                </LinearLayout>
+            </FrameLayout>
+
+
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutBackgroundAlpha">
