--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="colorWhite">#ffffff</color>
     <color name="colorWhiteAlpha">#46ffffff</color>
     <color name="colorWhiteAlphaHint">#78ffffff</color>
+    <color name="colorGray">#EDEEF0</color>
 </resources>
