--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
-        <android.support.design.widget.AppBarLayout
+       <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -32,6 +32,8 @@
                     android:src="@drawable/ic_action_doco" />
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
+
+      <!--  <include layout="@layout/toolbar_actionbar" />-->
 
         <include layout="@layout/content_main" />
 
