--- a/app/src/main/res/layout/dialog_is_driver_doco.xml
+++ b/app/src/main/res/layout/dialog_is_driver_doco.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:autofit="http://schemas.android.com/tools"
     android:background="@color/colorGray"
     android:orientation="vertical"
     android:padding="20dp"
@@ -10,7 +11,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/height_dialog"
         android:layout_weight="1"
         android:layout_marginTop="10dp"
         android:background="@color/colorBlackAlpha">
@@ -23,11 +24,20 @@
             android:gravity="center"
             android:padding="25dp">
 
-            <TextView
+           <!-- <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/docos_promotions"
-                android:textSize="25sp"/>
+                android:text="@string/docos_is_driver_question"
+                android:textSize="25sp"/>-->
+
+            <me.grantland.widget.AutofitTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="3"
+                android:text="@string/docos_is_driver_question"
+                android:textSize="26sp"
+                autofit:minTextSize="22sp"
+                />
 
         </LinearLayout>
     </LinearLayout>
@@ -40,7 +50,7 @@
         android:layout_weight="0">
 
         <EditText
-            android:id="@+id/edt_login"
+            android:id="@+id/edt_insert_driver_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/insert_driver_code"
@@ -61,9 +71,9 @@
             android:layout_height="wrap_content"
             style="@style/Button.Orange">
             <Button
-                android:id="@+id/btn_register_me"
+                android:id="@+id/btn_enter_driver_code"
                 style="@style/SelectableItemBackgroundButton"
-                android:text="@string/registrar" />
+                android:text="@string/enter" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
