--- a/app/src/main/res/layout/dialog_promotions.xml
+++ b/app/src/main/res/layout/dialog_promotions.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:autofit="http://schemas.android.com/tools"
     android:background="@color/colorGray"
     android:orientation="vertical"
     android:padding="20dp"
@@ -10,7 +11,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/height_dialog"
         android:layout_weight="1"
         android:layout_marginTop="10dp"
         android:background="@color/colorBlackAlpha">
@@ -21,19 +22,27 @@
             android:background="@drawable/fondo_emergente"
             android:orientation="vertical"
             android:gravity="center"
-            android:padding="25dp">
+            android:padding="20dp"
+            android:clickable="true"
+            android:foreground="@drawable/selectable_item_background">
 
-            <TextView
+            <me.grantland.widget.AutofitTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/docos_free_question"
-                android:textSize="40sp"/>
+                android:maxLines="1"
+                android:text="@string/docos_promotions_question"
+                android:textSize="35sp"
+                autofit:minTextSize="30sp"
+                />
 
-            <TextView
+            <me.grantland.widget.AutofitTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
                 android:text="@string/invite_your_friends"
-                android:textSize="25sp"/>
+                android:textSize="25sp"
+                autofit:minTextSize="22sp"
+                />
         </LinearLayout>
     </LinearLayout>
 
@@ -45,7 +54,7 @@
         android:layout_weight="0">
 
         <EditText
-            android:id="@+id/edt_login"
+            android:id="@+id/edt_code_doco_free"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/insert_code_doco_free"
@@ -66,7 +75,7 @@
             android:layout_height="wrap_content"
             style="@style/Button.Orange">
             <Button
-                android:id="@+id/btn_register_me"
+                android:id="@+id/btn_register_code_doco_free"
                 style="@style/SelectableItemBackgroundButton"
                 android:text="@string/registrar" />
         </LinearLayout>
