--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:id="@+id/container_main"
     tools:context="com.domicilio.confiable.doco.views.activities.MainActivity">
 
     <android.support.design.widget.CoordinatorLayout
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
-       <android.support.design.widget.AppBarLayout
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -33,16 +33,16 @@
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
 
-      <!--  <include layout="@layout/toolbar_actionbar" />-->
+        <!--  <include layout="@layout/toolbar_actionbar" />-->
 
         <include layout="@layout/content_main" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
-            <include layout="@layout/view_photo_marker"/>
-        </LinearLayout>
+        <!--
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+                    <include layout="@layout/view_photo_marker"/>
+                </LinearLayout> -->
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
@@ -52,8 +52,7 @@
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_action_doco"
             app:backgroundTint="@color/colorYellow"
-            app:rippleColor="@color/colorBlackAlpha"
-            />
+            app:rippleColor="@color/colorBlackAlpha" />
 
         <include layout="@layout/fab_layout" />
 
