Fecha: 22/12/2016 Autor: Edwin Fernando Muñoz Delgado Descripción: Implementación de Autenticación con google sign - firebase

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -88,6 +88,7 @@
                     android:src="@drawable/ic_logo_google" />
 
                 <ImageButton
+                    android:id="@+id/btn_google_sign"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
