--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,19 +75,24 @@
         </android.support.design.widget.TextInputLayout>
 
         <TextView
+            android:id="@+id/txt_forgot_your_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
             android:text="@string/olvidaste_contrasena"
             android:textColor="@color/colorWhite" />
 
-        <CheckBox
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+      <!--  <CheckBox
             android:id="@+id/chbox_remember_me"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorWhite"
             android:text="@string/recordar"
-            android:textColor="@color/colorWhite" />
+            android:textColor="@color/colorWhite" />-->
 
       <!--  <com.balysv.materialripple.MaterialRippleLayout style="@style/RippleView">
 
