--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -81,19 +81,21 @@
                 android:orientation="horizontal">
 
                 <ImageButton
+                    android:id="@+id/btn_google_sign"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:background="@null"
-                    android:src="@drawable/ic_logo_google" />
+                    android:src="@drawable/ic_logo_google"
+                    style="@style/SelectableItemBackground"/>
 
                 <ImageButton
-                    android:id="@+id/btn_google_sign"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:background="@null"
-                    android:src="@drawable/ic_logo_facebook" />
+                    android:src="@drawable/ic_logo_facebook"
+                    style="@style/SelectableItemBackground"/>
             </LinearLayout>
 
             <View
